...
            android:title="@string/menu_update"
            android:icon="@drawable/menu_update" />
        <item android:id="@+id/move_to_other_window_menu_id"
            android:title="@string/menu_move_to_other_window"
            android:icon="@drawable/ic_open_in_browser" />
        <item android:id="@+id/new_tab_menu_id"
            android:title="@string/menu_new_tab"
            android:icon="@drawable/ic_add_box_rounded_corner" />
        <item android:id="@+id/new_incognito_tab_menu_id"
            android:title="@string/menu_new_incognito_tab"
            android:icon="@drawable/incognito_simple" />
        <item android:id="@+id/all_bookmarks_menu_id"
            android:title="@string/menu_bookmarks"
            android:icon="@drawable/btn_star_filled" />
        <item android:id="@+id/recent_tabs_menu_id"
            android:title="@string/menu_recent_tabs"
...
