<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2021 The Chromium Authors
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->

<resources>
    <!-- Tab Actions -->
    <item type="id" name="close_tab" />
    <item type="id" name="delete_tab" />
    <item type="id" name="ungroup_tab" />
    <item type="id" name="edit_group_name" />
    <item type="id" name="edit_group_color" />
    <item type="id" name="select_tabs" />
    <item type="id" name="manage_sharing" />
    <item type="id" name="recent_activity" />
    <item type="id" name="leave_group" />
    <item type="id" name="open_new_tab_in_group" />
    <item type="id" name="share_group" />
    <item type="id" name="close_tab_group" />
    <item type="id" name="delete_tab_group" />

    <!-- Presentation is the same as delete_tab_group, but helps handler impl. -->
    <item type="id" name="delete_shared_group" />

    <!-- Menu IDs -->
    <item type="id" name="customize_adaptive_button_menu_id" />
    <item type="id" name="icon_row_menu_id" />
    <item type="id" name="incognito_tab_menu_id" />
    <item type="id" name="new_tab_menu_id" />
    <item type="id" name="new_incognito_tab_menu_id" />
    <item type="id" name="close_all_incognito_tabs_menu_id" />
    <item type="id" name="switch_to_incognito_menu_id" />
    <item type="id" name="switch_out_of_incognito_menu_id" />

    <!-- Vivaldi -->
    <item type="id" name="vivaldi_create_new_tab_stack" />
    <item type="id" name="vivaldi_close_other_tabs" />
</resources>
