...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.TextMedium.Secondary" />
        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/cookie_controls_block_cookies_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</merge>

